[#5237] Will now nightly-build for natty, Karmic deprecated

--- a/tools/build-system/launchpad/dput.conf
+++ b/tools/build-system/launchpad/dput.conf
@@ -53,3 +53,10 @@ method = ftp
 incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/maverick
 login = anonymous
 allow_unsigned_uploads = 0
+
+[sflphone-nightly-natty]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/sflphone-nightly/ubuntu/natty
+login = anonymous
+allow_unsigned_uploads = 0
