[#5227] Deactivate automatic call to astyle after compilation

--- a/sflphone-client-gnome/src/Makefile.am
+++ b/sflphone-client-gnome/src/Makefile.am
@@ -44,4 +44,4 @@ install-exec-local:
 uninstall-local:
 	-test -h $(DESTDIR)$(bindir)/sflphone && rm $(DESTDIR)$(bindir)/sflphone
 
-all: indent
+# all: indent
