[#5331] Added first SDP session tests

--- a/sflphone-common/test/Makefile.am
+++ b/sflphone-common/test/Makefile.am
@@ -30,7 +30,9 @@ test_SOURCES = \
 	instantmessagingtest.h \
 	instantmessagingtest.cpp \
 	siptest.h \
-	siptest.cpp
+	siptest.cpp \
+        sdptest.h \
+        sdptest.cpp
 
 LLIBS=$(CPPUNIT_LIBS) \
 	../src/sflphoned-logger.o \
