--- a/sflphone-common/test/sflphoned-sample.yml
+++ b/sflphone-common/test/sflphoned-sample.yml
@@ -54,7 +54,7 @@ preferences:
   historyMaxCalls: 20
   md5Hash: false
   notifyMails: false
-  order: Account:1302207377/Account:1302207262/Account:1302204136/Account:1302204108/Account:1294850905/Account:1294850775/Account:1294850618/Account:1294849651/Account:1294849602/Account:1294849310/Account:1288964768/Account:1288964603/Account:1288964434/Account:1288964141/Account:1288964134/
+  order: Account:1302895321/Account:1302892836/Account:1302891834/Account:1302882519/Account:1302207377/Account:1302207262/Account:1302204136/Account:1302204108/Account:1294850905/Account:1294850775/Account:1294850618/Account:1294849651/Account:1294849602/Account:1294849310/Account:1288964768/Account:1288964603/Account:1288964434/Account:1288964141/Account:1288964134/
   portNum: 5060
   registrationExpire: 180
   searchBarDisplay: true
