--- a/sflphone-common/test/Makefile.am
+++ b/sflphone-common/test/Makefile.am
@@ -30,9 +30,11 @@ test_SOURCES = \
 	instantmessagingtest.h \
 	instantmessagingtest.cpp \
 	siptest.h \
-	siptest.cpp
- #       sdptest.h \
- #       sdptest.cpp
+	siptest.cpp \
+	sdpsession.h \
+	sdpsession.cpp \
+	sdptest.h \
+	sdptest.cpp
 
 LLIBS=$(CPPUNIT_LIBS) \
 	../src/sflphoned-logger.o \
