[#5589] Use PKG_CHECK_MODULE for every client's dependencies

--- a/sflphone-client-gnome/src/widget/Makefile.am
+++ b/sflphone-client-gnome/src/widget/Makefile.am
@@ -7,7 +7,17 @@ libwidget_la_SOURCES = \
 		minidialog.c \
 		imwidget.c
 
-libwidget_la_LDFLAGS = @DEPS_LDFLAGS@
-libwidget_la_LIBADD = @DEPS_LIBS@
+libwidget_la_LDFLAGS = @DBUSGLIB_LDFLAGS@ @LIBNOTIFY_LDFLAGS@ \
+			@SFLGTK_LDFLAGS@ @SFLGLIB_LDFLAGS@ @WEBKIT_LDFLAGS@ @LIBEBOOK_LDFLAGS@ \
+			@LIBEDATASERVER_LDFLAGS@ @LIBEDATASERVERUI_LDFLAGS@ @LIBGNOMEUI_LDFLAGS@ \
+			@GNOMEDOCUTILS_LDFLAGS@
+
+libwidget_la_LIBADD = @DBUSGLIB_LIBS@ @LIBNOTIFY_LIBS@
+			@SFLGTK_LIBS@ @SFLGLIB_LIBS@ @WEBKIT_LIBS@ @LIBEBOOK_LIBS@ \
+			@LIBEDATASERVER_LIBS@ @LIBEDATASERVERUI_LIBS@ @LIBGNOMEUI_LIBS@ \
+			@GNOMEDOCUTILS_LIBS@
 					  
-libwidget_la_CFLAGS = @DEPS_CFLAGS@ 
+libwidget_la_CFLAGS = @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
+			@SFLGTK_CFLAGS@ @SFLGLIB_CFLAGS@ @WEBKIT_CFLAGS@ @LIBEBOOK_CFLAGS@ \
+			@LIBEDATASERVER_CFLAGS@ @LIBEDATASERVERUI_CFLAGS@ @LIBGNOMEUI_CFLAGS@ \
+			@GNOMEDOCUTILS_CFLAGS@
