--- a/sflphone-client-gnome/src/config/Makefile.am
+++ b/sflphone-client-gnome/src/config/Makefile.am
@@ -15,7 +15,17 @@ libconfig_la_SOURCES = \
   audioconf.c \
   utils.c 
 
-libconfig_la_LDFLAGS = @DEPS_LDFLAGS@
-libconfig_la_LIBADD = @DEPS_LIBS@
+libconfig_la_LDFLAGS = @DBUSGLIB_LDFLAGS@ @LIBNOTIFY_LDFLAGS@ \
+			@SFLGTK_LDFLAGS@ @SFLGLIB_LDFLAGS@ @WEBKIT_LDFLAGS@ @LIBEBOOK_LDFLAGS@ \
+			@LIBEDATASERVER_LDFLAGS@ @LIBEDATASERVERUI_LDFLAGS@ @LIBGNOMEUI_LDFLAGS@ \
+			@GNOMEDOCUTILS_LDFLAGS@
+
+libconfig_la_LIBADD = @DBUSGLIB_LIBS@ @LIBNOTIFY_LIBSI@ \
+			@SFLGTK_LIBS@ @SFLGLIB_LIBS@ @WEBKIT_LIBS@ @LIBEBOOK_LIBS@ \
+			@LIBEDATASERVER_LIBS@ @LIBEDATASERVERUI_LIBS@ @LIBGNOMEUI_LIBS@ \
+			@GNOMEDOCUTILS_LIBS@
 					  
-libconfig_la_CFLAGS = @DEPS_CFLAGS@ 
+libconfig_la_CFLAGS = @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
+			@SFLGTK_CFLAGS@ @SFLGLIB_CFLAGS@ @WEBKIT_CFLAGS@ @LIBEBOOK_CFLAGS@ \
+			@LIBEDATASERVER_CFLAGS@ @LIBEDATASERVERUI_CFLAGS@ @LIBGNOMEUI_CFLAGS@ \
+			@GNOMEDOCUTILS_CFLAGS@
