--- a/sflphone-client-gnome/src/contacts/Makefile.am
+++ b/sflphone-client-gnome/src/contacts/Makefile.am
@@ -13,8 +13,14 @@ libcontacts_la_SOURCES = \
   addressbook.c \
   conferencelist.c
 
-libcontacts_la_LDFLAGS = @DEPS_LDFLAGS@
+libcontacts_la_LDFLAGS = @DBUSGLIB_LDFLAGS@ @LIBNOTIFY_LDFLAGS@ \
+				@SFLGTK_LDFLAGS@ @SFLGLIB_LDFLAGS@ @WEBKIT_LDFLAGS@ @LIBEBOOK_LDFLAGS@ \
+				@LIBEDATASERVER_LDFLAGS@ @LIBEDATASERVERUI_LDFLAGS@ @LIBGNOMEUI_LDFLAGS@ \
+				@GNOMEDOCUTILS_LDFLAGS@ 
 					  
-libcontacts_la_CFLAGS = @DEPS_CFLAGS@ 
+libcontacts_la_CFLAGS = @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
+				@SFLGTK_CFLAGS@ @SFLGLIB_CFLAGS@ @WEBKIT_CFLAGS@ @LIBEBOOK_CFLAGS@ \
+				@LIBEDATASERVER_CFLAGS@ @LIBEDATASERVERUI_CFLAGS@ @LIBGNOMEUI_CFLAGS@ \
+				@GNOMEDOCUTILS_CFLAGS@
 
 libcontacts_la_LIBADD = ./addressbook/libaddressbook.la
