--- a/sflphone-client-gnome/src/contacts/addressbook/Makefile.am
+++ b/sflphone-client-gnome/src/contacts/addressbook/Makefile.am
@@ -4,6 +4,12 @@ noinst_LTLIBRARIES = libaddressbook.la
 
 libaddressbook_la_SOURCES = eds.c
 
-libaddressbook_la_LDFLAGS = @DEPS_LDFLAGS@
+libaddressbook_la_LDFLAGS = @DBUSGLIB_LDFLAGS@ @LIBNOTIFY_LDFLAGS@ \
+				@SFLGTK_LDFLAGS@ @SFLGLIB_LDFLAGS@ @WEBKIT_LDFLAGS@ @LIBEBOOK_LDFLAGS@ \
+				@LIBEDATASERVER_LDFLAGS@ @LIBEDATASERVERUI_LDFLAGS@ @LIBGNOMEUI_LDFLAGS@ \
+				@GNOMEDOCUTILS_LDFLAGS@
 					  
-libaddressbook_la_CFLAGS = @DEPS_CFLAGS@ 
+libaddressbook_la_CFLAGS = @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
+				@SFLGTK_CFLAGS@ @SFLGLIB_CFLAGS@ @WEBKIT_CFLAGS@ @LIBEBOOK_CFLAGS@ \
+				@LIBEDATASERVER_CFLAGS@ @LIBEDATASERVERUI_CFLAGS@ @LIBGNOMEUI_CFLAGS@ \
+				@GNOMEDOCUTILS_CFLAGS@
