[#5693] Add natty in teh dput.conf file

--- a/tools/build-system/launchpad/dput.conf
+++ b/tools/build-system/launchpad/dput.conf
@@ -26,6 +26,13 @@ incoming = ~savoirfairelinux/ubuntu/maverick
 login = anonymous
 allow_unsigned_uploads = 0
 
+[sflphone-natty]
+fqdn = ppa.launchpad.net
+method = ftp
+incoming = ~savoirfairelinux/ubuntu/natty
+login = anonymous
+allow_unsigned_uploads = 0
+
 [sflphone-nightly-jaunty]
 fqdn = ppa.launchpad.net
 method = ftp
