#5883: Fix compilation issues on maverick and lucid

--- a/sflphone-client-gnome/configure.ac
+++ b/sflphone-client-gnome/configure.ac
@@ -56,7 +56,7 @@ PKG_CHECK_MODULES(SFLGTK, gtk+-2.0 > 2.2)
 PKG_CHECK_MODULES(SFLGLIB, glib-2.0 >= 2.2)
 PKG_CHECK_MODULES(WEBKIT, webkit-1.0)
 PKG_CHECK_MODULES(LIBEBOOK, libebook-1.2 >= 1.4)
-PKG_CHECK_MODULES(LIBEDATASERVER, libedataserver-1.2)
+PKG_CHECK_MODULES([LIBEDATASERVER], [libedataserver-1.2 >= 2.32], [AC_DEFINE([LIBEDATASERVER_VERSION_2_32], [], [Using libedataserver-1.2 version 2.32 or higher])],[PKG_CHECK_MODULES([LIBEDATASERVER], [libedataserver-1.2 >= 1.4])])
 #PKG_CHECK_MODULES(LIBEDATASERVERUI, libedataserverui-1.2)
 PKG_CHECK_MODULES(LIBGNOMEUI, libgnomeui-2.0)
 PKG_CHECK_MODULES(GNOMEDOCUTILS, gnome-doc-utils)
