* #5948: adds unused videoconf widget

--- a/sflphone-client-gnome/src/config/Makefile.am
+++ b/sflphone-client-gnome/src/config/Makefile.am
@@ -13,6 +13,7 @@ libconfig_la_SOURCES = \
   accountconfigdialog.c \
   hooks-config.c \
   audioconf.c \
+  videoconf.c \
   utils.c 
 
 libconfig_la_LDFLAGS = @DBUSGLIB_LDFLAGS@ @LIBNOTIFY_LDFLAGS@ \
