* #5961: initial start/stop preview
Needs more work to better handle cases where window is closed versus
when the button is pressed.

--- a/sflphone-client-gnome/configure.ac
+++ b/sflphone-client-gnome/configure.ac
@@ -96,6 +96,7 @@ src/dbus/Makefile
 src/contacts/Makefile
 src/contacts/addressbook/Makefile
 src/widget/Makefile
+src/video/Makefile
 src/icons/Makefile
 pixmaps/Makefile
 webkit/Makefile
