--- a/sflphone-client-gnome/src/contacts/addressbook/Makefile.am
+++ b/sflphone-client-gnome/src/contacts/addressbook/Makefile.am
@@ -1,15 +1,19 @@
 include ../../../globals.mak
 
-noinst_LTLIBRARIES = libaddressbook.la
+noinst_PROGRAMS = libevladdrbook.so
 
-libaddressbook_la_SOURCES = eds.c
+libevladdrbook_so_SOURCES = eds.c addressbook.c
 
-libaddressbook_la_LDFLAGS = @DBUSGLIB_LDFLAGS@ @LIBNOTIFY_LDFLAGS@ \
-				@SFLGTK_LDFLAGS@ @SFLGLIB_LDFLAGS@ @WEBKIT_LDFLAGS@ @LIBEBOOK_LDFLAGS@ \
-				@LIBEDATASERVER_LDFLAGS@ @LIBEDATASERVERUI_LDFLAGS@ @LIBGNOMEUI_LDFLAGS@ \
-				@GNOMEDOCUTILS_LDFLAGS@
+libevladdrbook_so_LDFLAGS = --shared $(SFLGLIB_LDFLAGS) $(SFLGTK_CFLAGS) $(LIBEDATASERVER_LDFLAGS) $(LIBEDATASERVERUI_LDFLAGS) $(DBUSGLIB_LDFLAGS)
+
+# @DBUSGLIB_LDFLAGS@ @LIBNOTIFY_LDFLAGS@ \
+#				@SFLGTK_LDFLAGS@ @SFLGLIB_LDFLAGS@ @WEBKIT_LDFLAGS@ @LIBEBOOK_LDFLAGS@ \
+#				@LIBEDATASERVER_LDFLAGS@ @LIBEDATASERVERUI_LDFLAGS@ @LIBGNOMEUI_LDFLAGS@ \
+#				@GNOMEDOCUTILS_LDFLAGS@
 					  
-libaddressbook_la_CFLAGS = @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
-				@SFLGTK_CFLAGS@ @SFLGLIB_CFLAGS@ @WEBKIT_CFLAGS@ @LIBEBOOK_CFLAGS@ \
-				@LIBEDATASERVER_CFLAGS@ @LIBEDATASERVERUI_CFLAGS@ @LIBGNOMEUI_CFLAGS@ \
-				@GNOMEDOCUTILS_CFLAGS@
+libevladdrbook_so_CFLAGS = -fPIC -g -Wall $(SFLGLIB_CFLAGS) $(SFLGTK_CFLAGS) $(LIBEDATASERVER_CFLAGS) $(LIBEDATASERVERUI_CFLAGS) $(DBUSGLIB_CFLAGS)
+
+# @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
+#				@SFLGTK_CFLAGS@ @SFLGLIB_CFLAGS@ @WEBKIT_CFLAGS@ @LIBEBOOK_CFLAGS@ \
+#				@LIBEDATASERVER_CFLAGS@ @LIBEDATASERVERUI_CFLAGS@ @LIBGNOMEUI_CFLAGS@ \
+#				@GNOMEDOCUTILS_CFLAGS@
