--- a/sflphone-client-gnome/src/dbus/Makefile.am
+++ b/sflphone-client-gnome/src/dbus/Makefile.am
@@ -24,15 +24,15 @@ libdbus_la_SOURCES=     \
     dbus.c              \
     $(BUILT_SOURCES)
 
-libdbus_la_LDFLAGS= @DBUSGLIB_LDFLAGS@ @LIBNOTIFY_LDFLAGS@ \
-			@SFLGTK_LDFLAGS@ @SFLGLIB_LDFLAGS@ @WEBKIT_LDFLAGS@ @LIBEBOOK_LDFLAGS@ \
-			@LIBEDATASERVER_LDFLAGS@ @LIBEDATASERVERUI_LDFLAGS@ @LIBGNOMEUI_LDFLAGS@ \
-			@GNOMEDOCUTILS_LDFLAGS@
+libdbus_la_LDFLAGS= $(DBUSGLIB_LDFLAGS) $(LIBNOTIFY_LDFLAGS) \
+			$(SFLGTK_LDFLAGS) $(SFLGLIB_LDFLAGS) $(WEBKIT_LDFLAGS) $(LIBEBOOK_LDFLAGS) \
+			$(LIBEDATASERVER_LDFLAGS) $(LIBEDATASERVERUI_LDFLAGS) $(LIBGNOMEUI_LDFLAGS) \
+			$(GNOMEDOCUTILS_LDFLAGS)
 
-libdbus_la_CFLAGS= @DBUSGLIB_CFLAGS@ @LIBNOTIFY_CFLAGS@ \
-			@SFLGTK_CFLAGS@ @SFLGLIB_CFLAGS@ @WEBKIT_CFLAGS@ @LIBEBOOK_CFLAGS@ \
-			@LIBEDATASERVER_CFLAGS@ @LIBEDATASERVERUI_CFLAGS@ @LIBGNOMEUI_CFLAGS@ \
-			@GNOMEDOCUTILS_CFLAGS@
+libdbus_la_CFLAGS= $(DBUSGLIB_CFLAGS) $(LIBNOTIFY_CFLAGS) \
+			$(SFLGTK_CFLAGS) $(SFLGLIB_CFLAGS) $(WEBKIT_CFLAGS) $(LIBEBOOK_CFLAGS) \
+			$(LIBEDATASERVER_CFLAGS) $(LIBEDATASERVERUI_CFLAGS) $(LIBGNOMEUI_CFLAGS) \
+			$(GNOMEDOCUTILS_CFLAGS)
 
 EXTRA_DIST= \
     marshaller.list
