#5994: Move addressbook folder from contacts to plugin folder

--- a/sflphone-client-gnome/Makefile.am
+++ b/sflphone-client-gnome/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = src pixmaps webkit tests man po doc
+SUBDIRS = src pixmaps webkit tests man po doc plugin
 
 CFLAGS=-Wall -Werror -Wextra
 
