#6027: Add sflphone-plugins folder at project's root level

--- a/sflphone-client-gnome/Makefile.am
+++ b/sflphone-client-gnome/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = src pixmaps webkit tests man po doc plugin
+SUBDIRS = src pixmaps webkit tests man po doc
 
 CFLAGS=-Wall -Werror -Wextra
 
