* #6706: moved example shmclient into video/test

--- a/sflphone-common/libs/video/Makefile.am
+++ b/sflphone-common/libs/video/Makefile.am
@@ -1,3 +1,5 @@
+SUBDIRS=test
+
 bin_PROGRAMS = ffmpeg2rtp ffmpeg2shm
 
 AM_CFLAGS=@LIBAVCODEC_CFLAGS@ @LIBAVFORMAT_CFLAGS@ @LIBAVDEVICE_CFLAGS@ @LIBSWSCALE_CFLAGS@
