* #6082: fixes make check by adding libcrypto libs to test dependencies

--- a/sflphone-common/test/Makefile.am
+++ b/sflphone-common/test/Makefile.am
@@ -3,7 +3,7 @@ include ../globals.mak
 check_PROGRAMS = test
 
 test_CXXFLAGS = $(CPPUNIT_CFLAGS)
-test_LDADD = $(LLIBS)
+test_LDADD = $(LLIBS) @LIBCRYPTO_LIBS@
 
 test_SOURCES = \
 	main.cpp \
