--- a/sflphone-common/libs/video/Makefile.am
+++ b/sflphone-common/libs/video/Makefile.am
@@ -2,6 +2,9 @@ SUBDIRS=test
 
 bin_PROGRAMS = ffmpeg2rtp ffmpeg2shm
 
-AM_CFLAGS=@LIBAVCODEC_CFLAGS@ @LIBAVFORMAT_CFLAGS@ @LIBAVDEVICE_CFLAGS@ @LIBSWSCALE_CFLAGS@
+AM_CXXFLAGS=@LIBAVCODEC_CFLAGS@ @LIBAVFORMAT_CFLAGS@ @LIBAVDEVICE_CFLAGS@ @LIBSWSCALE_CFLAGS@
+ffmpeg2rtp_SOURCES=ffmpeg2rtp.cpp
 ffmpeg2rtp_LDADD=@LIBAVCODEC_LIBS@ @LIBAVFORMAT_LIBS@ @LIBAVDEVICE_LIBS@ @LIBSWSCALE_LIBS@
+
+ffmpeg2shm_SOURCES=ffmpeg2shm.c
 ffmpeg2shm_LDADD=@LIBAVCODEC_LIBS@ @LIBAVFORMAT_LIBS@ @LIBAVDEVICE_LIBS@ @LIBSWSCALE_LIBS@
