* #6075: more videocodec API

--- a/sflphone-common/src/Makefile.am
+++ b/sflphone-common/src/Makefile.am
@@ -65,6 +65,7 @@ noinst_HEADERS = \
 
 libsflphone_la_LIBADD = \
 	$(src)/libs/utilspp/libutilspp.la \
+	$(src)/libs/video/libvideo_endpoint.la \
 	$(src)/libs/iax2/libiax2.la \
 	$(src)/libs/dbus-c++/src/libdbus-c++-1.la \
 	$(IAX_LIB) \
