* #6094: first video unit test

--- a/sflphone-common/libs/video/test/Makefile.am
+++ b/sflphone-common/libs/video/test/Makefile.am
@@ -1,3 +1,6 @@
 check_PROGRAMS=test_list_codecs
 
-test_list_codecs_SOURCES=test_list_codecs.cpp
+test_list_codecs_SOURCES=test_video_endpoint.cpp
+test_list_codecs_LDADD=$(top_builddir)/libs/video/libvideo_endpoint.la \
+					   $(CPPUNIT_LIBS)
+test_list_codecs_CXXFLAGS=-I./ -I../
