--- a/sflphone-common/libs/video/Makefile.am
+++ b/sflphone-common/libs/video/Makefile.am
@@ -4,7 +4,8 @@ noinst_PROGRAMS = ffmpeg2rtp ffmpeg2shm
 noinst_LTLIBRARIES = libvideo_endpoint.la
 
 libvideo_endpoint_la_SOURCES = video_endpoint.cpp video_endpoint.h \
-							   libav_utils.cpp libav_utils.h
+							   libav_utils.cpp libav_utils.h \
+							   video_rtp_session.cpp video_rtp_session.h
 libvideo_endpoint_la_LIBADD = @LIBAVFORMAT_LIBS@ 
 
 AM_CXXFLAGS=@LIBAVCODEC_CFLAGS@ @LIBAVFORMAT_CFLAGS@ @LIBAVDEVICE_CFLAGS@ @LIBSWSCALE_CFLAGS@
